indented html to read easier

--- a/gallery.css
+++ b/gallery.css
@@ -1,1 +1,13 @@
-.css
+h2 {
+  color: green;
+  font-family: arial; 
+}
+
+.slide {
+
+}
+
+.caption {
+  color: purple;
+  font-family: georgia;
+}
