--- a/gallery.css
+++ b/gallery.css
@@ -1,7 +1,9 @@
 h2 {
-  color: green;
+  color: maroon;
   font-family: arial; 
-  font-size: 40px
+  font-size: 40px;
+  text-align: center;
+
 }
 
 .slide {
@@ -9,18 +11,36 @@ h2 {
 }
 
 .caption {
-  color: blue;
+  color: darkolivegreen;
   font-family: georgia;
-  font-size: 25px
+  font-size: 25px;
+  text-align: center;
+
 }
 
 img {
 	height: 500px;
 	width: 650px;
+	border-style: dashed;
+	border-color: white;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 button {
 	height: 50px;
 	width: 75px;
 	font-weight: bold; 
+	font-family: arial;
+	font-size: 14px;
+	background-color: black;
+	color: white;
+	margin-left: center;
+	margin-right: center;
+	display: block;
+}
+
+body {
+	background-color: turquoise;
 }
